--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <title>MadLib</title>
 </head>
 <body>
+
   <header>
     <h1>My First Two Days at Bootcamp Prep: a Mad Lib</h1>
   </header>
+
   <main>
     <section>
       <h2>Fill in the Blanks</h2>
@@ -56,7 +58,6 @@
           <input id="past-tense-two">
         </label>
       </p>
-
       
       <p>
         <label>
@@ -80,11 +81,16 @@
     <section class="mad-lib">
       <h2>Read Your Mad Lib!</h2>
 
-      <p>On Monday, I learned about <span id="present-verb-span"></span> the terminal. I almost got everything <span id="adj-one-span"></span>, but ran into problems with the <span id="noun-one-span"></span>.</p>
+      <p>
+        On Monday, I learned about <span id="present-verb-span"></span> the terminal. I almost got everything <span id="adj-one-span"></span>, but ran into problems with the <span id="noun-one-span"></span>.
+      </p>
 
-      <p>On Tuesday, I <span id="past-verb-span"></span> on HTML and CSS. Wow, CSS is <span id="adj-two-span"></span>! I <span id="past-verb-two-span"></span> my first site. I’m looking forward to making <span id="number-span"></span> more <span id="adj-three-span"></span>, functional web apps.</p>
+      <p>
+        On Tuesday, I <span id="past-verb-span"></span> on HTML and CSS. Wow, CSS is <span id="adj-two-span"></span>! I <span id="past-verb-two-span"></span> my first site. I’m looking forward to making <span id="number-span"></span> more <span id="adj-three-span"></span>, functional web apps.
+      </p>
     </section>
   </main>
+
 </body>
 <script src="app.js"></script>
 </html>
