making madlib hidden

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </p>
     </section>
 
-    <section class="mad-lib">
+    <section id="mad-lib" class="hidden">
       <h2>Read Your Mad Lib!</h2>
 
       <p>
